release 1.14
- Fixed issue JERSEY-1407
  http://java.net/jira/browse/JERSEY-1407
  Licensee bundle now includes JAX-RS sources
- Fixed issue JERSEY-1277
  The web container Grizzly doesn't call anymore the ServletContextListener instances at shutdown
  Grizzly version upgraded to 2.2.16
  Grizzly HTTP Client upgraded to 1.2
- Fixed issue JERSEY-881
  http://java.net/jira/browse/JERSEY-881
  Package name resource config does not work in OSGi environment
- Fixed issue JERSEY-1373
  http://java.net/jira/browse/JERSEY-1373
  Features are lost when configuring PackagesResourceConfig using @ApplicationPath
- Fixed issue JERSEY-1392
  http://java.net/jira/browse/JERSEY-1392
  Jersey Inmemory container rewrites Container Request/Response Filters
- Fixed issue JERSEY-1197
  http://java.net/jira/browse/JERSEY-1197
  Jersey Test Framework constructor fails when given multiple packages
- Fixed issue JERSEY-1336
  http://java.net/jira/browse/JERSEY-1336
  WADL: Matrix params were generated in "request" element, which violates WADL spec; moved
  to resource where it should be.
- Fixed issue JERSEY-1350
  http://java.net/jira/browse/JERSEY-1350
  Memory leak in OAuth NonceManager
- Fixed issue JERSEY-1341
  http://java.net/jira/browse/JERSEY-1341
  UriBuilderImpl is now adding "=" after the query parameter name even if the value is empty.
- Fixed issue JERSEY-1293
  http://java.net/jira/browse/JERSEY-1293
  ApacheHttpClient4 proxy uri was not used when credentials were not specified.
- Fixed issue JERSEY-1230
  http://java.net/jira/browse/JERSEY-1230
  Added property to WadlGeneratorGrammarsSupport which controls whether Jersey generated
  grammars should be used when user explicitly sets its own grammar.
- Fixed issue 677
  http://java.net/jira/browse/JERSEY-677
  OSGi Manifest imports incomplete in jersey-spring
- Fixed issue 1259
  http://java.net/jira/browse/JERSEY-1259
  Array out of bounds error when you specify an empty list of @Produces annotation

release 1.13 (07-2012)